--- a/demo/index.html
+++ b/demo/index.html
@@ -239,7 +239,7 @@
         "hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
         "cookieName": "tartaucitron", /* Cookie name */
 
-        "orientation": "bottom", /* Banner position (top - bottom) */
+        "orientation": "modal", /* Banner position (top - bottom - modal) */
         "showAlertSmall": false, /* Show the small banner on bottom right */
         "cookieslist": true, /* Show the cookie list */
 
@@ -259,7 +259,16 @@
 
     tarteaucitron.user.gajsUa = 'UA-XXXXXXXX-X';
     tarteaucitron.user.gajsMore = function () { /* add here your optionnal _ga.push() */ };
+    tarteaucitron.user.shareaholicSiteId = 'site_id';
+    tarteaucitron.user.googlemapsKey = 'API KEY';
+
     (tarteaucitron.job = tarteaucitron.job || []).push('gajs');
+    (tarteaucitron.job = tarteaucitron.job || []).push('hotjar');
+    (tarteaucitron.job = tarteaucitron.job || []).push('vshop');
+    (tarteaucitron.job = tarteaucitron.job || []).push('shareaholic');
+    (tarteaucitron.job = tarteaucitron.job || []).push('googlemaps');
+
+
 
 </script>
 </body>
